Unity/im_unity_sdk_plus/Assets/TencentIMSDK/Plugins/Metro/ImSDK_Windows_C_6.1.2155/include/TIMCloudCallback.h

/**
* @brief 更新好友资料的回调
*
* @param json_friend_profile_update_array 好友资料更新列表
* @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
*
* @example json_friend_profile_update_array 示例, 具体信息请参考 [FriendProfileItem](TIMCloudDef.h)
* [
*    {
*       "friend_profile_update_identifier" : "user4",
*       "friend_profile_update_item" : {
*          "friend_profile_item_group_name_array" : [ "group1", "group2" ],
*          "friend_profile_item_remark" : "New Remark"
*       }
*    }
* ]

*/
typedef void(*TIMUpdateFriendProfileCallback)(const char* json_friend_profile_update_array, const void* user_data);
/**
* @brief 好友添加请求的回调
*
* @param json_friend_add_request_pendency_array 好友添加请求未决信息列表
* @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
* 
* @example json_friend_add_request_pendency_array 示例，json key 请参考 [FriendAddPendency](TIMCloudDef.h)
* [
*    {
*       "friend_add_pendency_add_source" : "AddSource_Type_android",
*       "friend_add_pendency_add_wording" : "aaaa",
*       "friend_add_pendency_identifier" : "v222",
*       "friend_add_pendency_nick_name" : ""
*    }
* ]
*/
typedef void(*TIMFriendAddRequestCallback)(const char* json_friend_add_request_pendency_array, const void* user_data);
/**
* @brief 好友申请删除通知
*  四种情况会收到这个回调
*  1. 主动删除好友申请
*  2. 拒绝好友申请
*  3. 同意好友申请
*  4. 申请加别人好友被拒绝
* @param json_identifier_array 删除好友请求的 userid 列表
* @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
*
* @example json_identifier_array 的示例
* [ "user15" ]
*
*/
typedef void(*TIMFriendApplicationListDeletedCallback)(const char* json_identifier_array, const void* user_data);
/**
* @brief 好友申请已读通知，如果调用 setFriendApplicationRead 设置好友申请列表已读，会收到这个回调（主要用于多端同步）
*
* @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
*
*/
typedef void(*TIMFriendApplicationListReadCallback)(const void* user_data);
/**
* @brief 黑名单新增通知

* @param json_friend_black_added_array 新增黑名单列表
* @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
*
* @example json_friend_black_added_array 示例。 json key 请参考 [FriendProfile](TIMCloudDef.h)
* [{
*   "friend_profile_add_source": "",
*   "friend_profile_add_time": 0,
*   "friend_profile_add_wording": "",
*   "friend_profile_custom_string_array": [{
*       "friend_profile_custom_string_info_key": "Tag_Profile_Custom_Str",
*       "friend_profile_custom_string_info_value": "test3-lamar-value"
*   }],
*   "friend_profile_group_name_array": [],
*   "friend_profile_identifier": "98826",
*   "friend_profile_remark": "",
*   "friend_profile_user_profile": {
*       "user_profile_add_permission": 1,
*       "user_profile_birthday": 2000,
*       "user_profile_custom_string_array": [{
*           "user_profile_custom_string_info_key": "Tag_Profile_Custom_Str",
*           "user_profile_custom_string_info_value": "test3-lamar-value"
*       }],
*       "user_profile_face_url": "test1-www.google.com",
*       "user_profile_gender": 2,
*       "user_profile_identifier": "98826",
*       "user_profile_language": 1000,
*       "user_profile_level": 3000,
*       "user_profile_location": "shenzhen",
*       "user_profile_nick_name": "test change8888",
*       "user_profile_role": 4000,
*       "user_profile_self_signature": "1111111"
*   }
*}]
*/
typedef void(*TIMFriendBlackListAddedCallback)(const char* json_friend_black_added_array, const void* user_data);
/**
* @brief 黑名单删除通知
*  
* @param json_identifier_array 黑名单列表
* @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
*
* @example json_identifier_array 示例
* [ "user15" ]
*/
typedef void(*TIMFriendBlackListDeletedCallback)(const char* json_identifier_array, const void* user_data);
/**
* @brief 日志回调
*
* @param level 日志级别,请参考[TIMLogLevel](TIMCloudDef.h)
* @param log 日志字符串
* @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
*/
typedef void (*TIMLogCallback)(enum TIMLogLevel level, const char* log, const void* user_data);
/**
* @brief 消息更新回调
*
* @param json_msg_array 更新的消息数组
* @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
*
* @note
* 请参考 [TIMRecvNewMsgCallback]()
*/
typedef void (*TIMMsgUpdateCallback)(const char* json_msg_array, const void* user_data);