Unity/im_unity_sdk_plus/Assets/TencentIMSDK/Native/NativeSDK.cs


        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMUpdateFriendProfileCallback(IntPtr json_friend_profile_update_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMFriendAddRequestCallback(IntPtr json_friend_add_request_pendency_array, IntPtr user_data);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMFriendApplicationListDeletedCallback(IntPtr json_identifier_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMFriendApplicationListReadCallback(IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMFriendBlackListAddedCallback(IntPtr json_friend_black_added_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMFriendBlackListDeletedCallback(IntPtr json_identifier_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMLogCallback(int level, IntPtr log, IntPtr user_data);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMMsgUpdateCallback(IntPtr json_msg_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void CommonCallback(int code, IntPtr user_data);


       
    }
}